# rtos_data_acquisition

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  data_acquisition.uvoptx  data_acquisition.uvprojx  lpc1768.sct  pyproject.toml
RTE/CMSIS/: RTX_Config.c  RTX_Config.h
RTE/Device/LPC1768/: RTE_Device.h  startup_LPC17xx.s  system_LPC17xx.c
RTE/Network/: Net_Config.h  Net_Config_ETH_0.h  Net_Config_UDP.h  Net_Debug.h
RTE/RTOS/: FreeRTOSConfig.h
RTE/_Target_1/: RTE_Components.h
RTE/_data_acquistion/: RTE_Components.h
data_acquisition/: cli.py  client.py  protocol.py
data_acquisition/storage/: base.py  binary.py  null.py  sqlite.py
docs/: Doxyfile  mainpage.dox
docs/figures/: architecture.dot
include/app/: config.h  system.h
include/drivers/: adc.h
include/net/: protocol.h  udp_socket.h
include/tasks/: task_acquisition.h  task_init.h  task_network.h
include/utils/: logger.h  panic.h
src/app/: main.c  system.c
src/drivers/: adc.c
src/net/: protocol.c  udp_socket.c
src/tasks/: task_acquisition.c  task_init.c  task_network.c
src/utils/: logger.c  panic.c
