[project]
name = "data-acquisition"
version = "1.0.0"
description = "A simple data acquisition based on LPC1768 microcontroller with FreeRTOS."
authors = [
    { name = "Wiktor Szewczyk", email = "wiktorsz2002@gmail.com" },
    { name = "Patryk Madej" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
data-acquisition = "data_acquisition:main"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
